# pynamodb-in-pytest

./: .gitignore  Dockerfile  README.md  create_local_table.py  docker-compose.yml  pyproject.toml
app/: config.py  repository.py
test/: test_repository.py
