[tool.poetry]
name = "pynamodb-in-pytest"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9"
pynamodb = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
